tdf#113547 DOCX import: fix handling of stub numbering overrides

Regression from commit c72a1a74b5b1064fc9cdf9994b11fce26d866e26
(Related: tdf#112211 DOCX import: fix handling of missing first ind in
<w:lvl>, 2017-09-19), now that a numbering level can have default
properties, we need to differentiate between the case when the level has
real properties or it has only default properties.

Merging of properties is not necessary when the abstract numbering has
properties, but the "override" has default properties only.

Change-Id: Idbcbd0f66932514612e11fe82377f2b68ac9e403